# conductor

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Makefile  Makefile.am  README  README.creole  README.md  aeolus-all.spec.in  aeolus-conductor.spec  aeolus-conductor.spec.in  autogen.sh  configure.ac  deltacloud-aggregator.spec.in  deltacloud-portal.spec.in  openstack_notes  ovirt-server-test.ks
conf/: aeolus-conductor  aeolus-conductor-httpd.conf  aeolus-conductor.logrotate  aeolus-conductor.sysconf  aeolus-tmpfiles.conf  conductor-condor_refreshd  conductor-dbomatic  conductor-delayed_job  conductor-delayed_job.systemd  conductor-image_builder_service  conductor-warehouse_sync  deltacloud-aggregator  deltacloud-aggregator.logrotate  deltacloud-aggregator.sysconf  deltacloud-condor_refreshd  deltacloud-dbomatic  deltacloud-image_builder_service  deltacloud-mongrel-rails  deltacloud-mongrel-rails.sysconf  deltacloud-portal.conf  deltacloud-portal.logrotate  deltacloud-rails.sysconf  deltacloud-taskomatic
examples/: sample-deployable.xml
rel-eng/: releasers.conf  tito.props
services/image_factory/: .gitignore  README
services/image_factory/aeolus-image/: Rakefile  rubygem-aeolus-cli.spec  rubygem-aeolus-image.spec
services/image_factory/console/: Rakefile  rubygem-image_factory_console.spec  rubygem-imagefactory-console.spec
services/image_factory/image_factory_connector/: Rakefile  aeolus-connector.init  rubygem-image_factory_connector.spec
src/: .gitignore  .project  .rvmrc  FIXME.immigrant  Gemfile  Gemfile.in  Rakefile  config.ru
src/app/controllers/: application_controller.rb  assemblies_controller.rb  builds_controller.rb  catalog_entries_controller.rb  catalogs_controller.rb  cloud_accounts_controller.rb  config_servers_controller.rb  dashboard_controller.rb  deployables_controller.rb  deployments_controller.rb  frontend_realms_controller.rb  hardware_profiles_controller.rb  image_controller.rb  image_descriptor_controller.rb  image_descriptor_target_controller.rb  image_imports_controller.rb  images_controller.rb  instance_controller.rb  instances_controller.rb  legacy_assemblies_controller.rb  legacy_deployables_controller.rb  legacy_templates_controller.rb  logs_controller.rb  password_resets_controller.rb  permissions_controller.rb  pool_controller.rb  pool_families_controller.rb  pool_families_to_provider_accounts_associations_controller.rb  pool_provider_account_options_controller.rb  pools_controller.rb  portal_pool_controller.rb  provider_accounts_controller.rb  provider_controller.rb  provider_images_controller.rb  provider_priority_groups_controller.rb  provider_realms_controller.rb  provider_selections_controller.rb  provider_types_controller.rb  providers_controller.rb  quota_controller.rb  (+12 more)
src/app/helpers/: api_helper.rb  application_helper.rb  converge-ui  dashboard_helper.rb  deployables_helper.rb  deployments_helper.rb  frontend_realms_helper.rb  hardware_profiles_helper.rb  image_descriptor_helper.rb  images_helper.rb  instance_helper.rb  instances_helper.rb  layout_helper.rb  legacy_templates_helper.rb  mustache_helper.rb  pool_provider_account_options_helper.rb  portal_pool_helper.rb  provider_accounts_helper.rb  provider_controller_helper.rb  provider_realms_helper.rb  provider_selections_helper.rb  providers_helper.rb  realms_helper.rb  roles_helper.rb  task_helper.rb  templates_helper.rb  user_groups_helper.rb  user_sessions_helper.rb  users_helper.rb
src/app/jobs/: deployment_destroy.rb
src/autotest/: discover.rb
src/classad_plugin/: Makefile.am  classad_plugin.rb  conductor_classad_plugin.cpp  deltacloud_classad_plugin.cpp
src/condor_refreshd/: condor_refreshd  condor_refreshd.rb
src/config/: application.rb  boot.rb  compass.rb  cucumber.yml  database.mysql  database.pg  database.sqlite  database.yml  database.yml.0  environment.rb  image_descriptor_package_metagroups.conf  image_descriptor_package_repositories.yml  image_descriptor_platform_repositories.yml  image_descriptor_targets.yml  image_factory_console.yml  image_warehouse.yml  navigation.rb  new_navigation.rb  old_navigation.rb  routes.rb  selenium.yml  settings.yml  sunspot.yml
src/db/: seeds.rb
src/dbomatic/: dbomatic  dbomatic.rb
src/doc/: COSTS.md
src/dutils/: active_record_env.rb  dutils.rb
src/features/: api.feature  authentication.feature  breadcrumbs.feature  catalog_api.feature  catalog_entries.feature  catalogs.feature  config_server.feature  deployable.feature  deployable_permissions.feature  deployables.feature  deployment.feature  deployment_api.feature  error_handling.feature  frontend_realm.feature  hardware_profile.feature  image.feature  image_import.feature  instance.feature  legacy_deployable.feature  legacy_deployable_permissions.feature  legacy_template.feature  logs.feature  permission.feature  pool.feature  pool_api.feature  pool_family.feature  pool_provider_account_option.feature  provider.feature  provider_account.feature  provider_account_api.feature  provider_api.feature  provider_priority_group.feature  provider_type.feature  provider_type_api.feature  realm.feature  role.feature  settings.feature  suggested_deployables.feature  template.feature  unprivileged_user.feature  (+3 more)
src/image_builder_service/: image_builder_service
src/lib/: costengine.rb  deployable_matching.rb  exceptions.rb  fix_string_interpolate.rb  image.rb  ldap.rb  oauth_client.rb  password.rb  provider_selection.rb  viewstate.rb  warehouse_client.rb  warehouse_model.rb
src/locale/: app.pot  model_attributes.rb
src/runner/: image_builder_service.rb
src/script/: aeolus-upgrade  cucumber  grant_admin_privileges  rails  server  upgrade  use-existing-ec2-templates
src/spec/: bundler_ext_helper.rb  event_spec_helper.rb  spec_helper.rb  vcr_setup.rb  vcr_setup_norec.rb
src/task-omatic/: taskomatic.rb  taskomatic_instance.rb  taskomatic_task.rb
src/test/: test_helper.rb
src/warehouse_sync/: warehouse_sync-server  warehouse_sync.rb
util/: aeolus_translate.rb  build-all  check_services  cleanup-ruby
util/redmine-bot/: README  bot.rb  config.yml
(+1783 files in other folders)
